# DCC-Pipeline_Tool

./: .gitignore  README.md  architecture.md  conftest.py  main.py  pyproject.toml
adapters/: houdini.py  houdini_adapter.py  maya_adapter.py
core/: assets.py  models.py  project.py  rendering.py  utils.py
data/sample/scene/: ball_anim.mb  ball_anim.usda  gallery.mb  gallery.usda  test.hipnc
docs/: dev_log.md
sample/: scene.mb
tests/: test_existing_project.py  test_main_project_window.py  test_new_project.py  test_new_project_window.py  test_project_config.py  test_render_manager.py
ui/: dialog.py  main_window.py  progress_window.py  project_window.py  render_gallery.py  render_window.py  start_window.py  workers.py
